<?xml version="1.0"?>
<package format="2">
  <name>test1_pkg</name>
  <version>0.0.1</version>
  <description>The test1_pkg package</description>


  <maintainer email="naoessf@gmail.com">naoessf</maintainer>
  <url type="website">https://naoe.hongik.ac.kr</url>
  <url type="repository">https://github.com/naoessf/inhyuk2</url>
  <author email="naoessf@gmail.com">naoessf</author>
  <license>Hongik</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
